# rego-mlops

./: .gitignore  ANTIGRAVITY_PROMPT.md  Dockerfile  docker-compose.yml  pyproject.toml  verify.bat
.github/workflows/: cd.yml  ci.yml  ct.yml
docs/: AIRULES.md  ARCHITECTURE.md  CONSTRAINTS.md  DESIGN.md  ISSUES.md  PLAN.md  PRD.md  SKILLS.md  STATE.md  TECH.md  TESTING.md  design-preview.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Shell.tsx
frontend/src/features/compliance-officer/pages/: Regulations.tsx
frontend/src/features/ml-engineer/pages/: Pipeline.tsx
frontend/src/lib/auth/: supabase.ts  useAuth.test.ts  useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Unauthorized.tsx
scripts/: poc_pipeline.py  seed_rbi_rules.py  verify_z3_install.py
src/api/: dependencies.py  main.py
src/api/routes/: __init__.py  certificates.py  health.py  models.py  pipeline.py  regulations.py
src/api/schemas/: certificate.py  model.py  pipeline.py  regulation.py
src/features/: __init__.py
src/lib/: __init__.py  neo4j_client.py  supabase_client.py
src/pipeline/: __init__.py
supabase/migrations/: 01_users.sql  02_regulations.sql  03_certificates.sql  04_pipeline_events.sql
system/: LLM_INSTRUCTIONS.md
tests/: test_stub.py
